<resources>
    <string name="app_name">ChatApp</string>
    <string name="judul">CHATAPP</string>
    <string name="intoregis">belum punya akun ?</string>
    <string name="regis">klik disini</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="masuk">masuk</string>
    <string name="daftar">daftar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="keluar">Keluar</string>
    <string name="buat_group">Buat Group</string>
    <string name="this_is_message">This is message</string>
    <string name="this_is_profil">This is profil</string>
    <string name="this_is_contact">This is contact</string>
    <string name="usernamebig">Username</string>
    <string name="status">Status</string>
    <string name="tentang_penggunaan_aplikasi">Tentang Penggunaan Aplikasi</string>
    <string name="cara_penggunaan_aplikasi">Cara Penggunaan Aplikasi</string>
    <string name="ketik">ketik disini...</string>
    <string name="test">Test</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="cari_disini">Cari disini...</string>
    <string name="dilihat">dilihat</string>
    <string name="lupa_password">lupa password ?</string>
    <string name="reset">Setelah menekan tombol reset, maka akan ada email yang masuk untuk mereset password</string>
    <string name="profil">Profil</string>
    <string name="date">date</string>
</resources>
