<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/colorBase">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"/>

    <LinearLayout
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/roundedittext"
            tools:ignore="RtlSymmetry"/>

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:inputType="text"
            android:hint="@string/username"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/roundedittext"
            tools:ignore="RtlSymmetry"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/roundedittext"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:text="@string/daftar"
            android:textSize="18sp"
            android:textColor="#fff"
            android:layout_marginTop="55dp"
            android:background="@drawable/roundbutton"/>

    </LinearLayout>

</RelativeLayout>